refactor: use clamp instead of max(min())